Fix white space at the bottom. *facepalm*

--- a/PeopleIKnow/wwwroot/css/site.css
+++ b/PeopleIKnow/wwwroot/css/site.css
@@ -5,6 +5,7 @@
 #pik-app {
     margin-top: 0;
     margin-left: 0;
+    margin-bottom: 0;
 }
 
 .segments {
